--- a/R_analyses/_targets.yaml
+++ b/R_analyses/_targets.yaml
@@ -2,3 +2,6 @@ Annotation:
   script: Annotation_targets.R
   store: results/Annotation
 
+AnalyseDiff:
+  script: AnalyseDiff_targets.R
+  store: results/AnalyseDiff
