--- a/R_analyses/_targets.yaml
+++ b/R_analyses/_targets.yaml
@@ -1,7 +1,7 @@
 Annotation:
   script: Annotation_targets.R
   store: results/Annotation
-
 AnalyseDiff:
   script: AnalyseDiff_targets.R
   store: results/AnalyseDiff
+  inherits: Annotation
